Added springdoc dependency. Updated security filter for Swagger ui.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 username.length=6
 pass.length=8
 shortcut.code.length=10
+spring.mvc.pathmatch.matching-strategy= ANT_PATH_MATCHER
