--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.7.12</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>ru..job4j</groupId>
+	<groupId>ru.job4j</groupId>
 	<artifactId>urlshortcut</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>urlshortcut</name>
@@ -63,12 +63,6 @@
 			<artifactId>java-jwt</artifactId>
 			<version>3.4.0</version>
 		</dependency>
-
-<!--		<dependency>-->
-<!--			<groupId>io.springfox</groupId>-->
-<!--			<artifactId>springfox-boot-starter</artifactId>-->
-<!--			<version>3.0.0</version>-->
-<!--		</dependency>-->
 
 		<dependency>
 			<groupId>org.springdoc</groupId>
